--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "bankingapp",
   "version": "1.0.0",
   "description": "",
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --mode development",
@@ -11,9 +15,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^10.3.4",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "postcss": "^8.3.6",
+    "postcss-loader": "^6.1.1",
     "sass": "^1.39.2",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
