--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
