--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0-rc.1"
+  },
+  "dependencies": {
+    "swiper": "^7.0.5"
   }
 }
